# orbis-am-models

./: README.md  job-eval-sta-class.sh  job-train-eval-comp-class.sh  job-train-eval-comp-rel-class.sh  job-train-eval-sta-class.sh  job-train-eval-sta-rel-class.sh  pyproject.toml  train-eval-comp-class.sh  train-eval-comp-rel-class.sh  train-eval-sta-class.sh  train-eval-sta-rel-class.sh
amtm/data/: statement_classification.py
data/statements/classification/: all-PE-train.tsv  all-PE-validation.tsv  all-train.tsv  all-validation.tsv  bcause-train.tsv  bcause-validation.tsv  combinedBcause-Touche-test.tsv  combinedBcause-Touche-train.tsv  combinedBcause-Touche-validation.tsv  combinedBcause-test.tsv  combinedBcause-train.tsv  combinedBcause-validation.tsv  newest-3-2-25-bcause-PE-test.tsv  newest-3-2-25-bcause-test.tsv  touche-PE-test.tsv
data/statements/relation/: all-validation.tsv  bcause-train.tsv  bcause-validation.tsv  newest-3-2-25-bcause-test.tsv
scripts/: eval.py  train.py
