[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "argumentation-mining-transformers-module"
version = "1.0.1"
authors = [
    { name="Cristian Cardellino", email="cristian.a.cardellino@inria.fr" },
    { name="Sofiane Elguendouze", email="sofiane.elguendouze@inria.fr" },
    { name="Erwan Hain", email="erwan.hain@inria.fr" },
]
description = "Module to train Transformer-based Argumentation Mining models"
readme = "README.md"
requires-python = ">=3.10.8"
dynamic = ["dependencies", "optional-dependencies"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)"
]

[project.urls]
Homepage = "https://github.com/orbis-marianne/orbis-am-models"
Issues = "https://github.com/orbis-marianne/orbis-am-models/issues"

[tool.black]
extend-exclude = '\w*.ipynb'
line-length = 100

[tool.setuptools.packages.find]
include = ["amtm*"]
exclude = ["*venv*", "*env*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies.dev = { file = ["dev-requirements.txt"] }
